première version presque complète des pages de détails

--- a/pages/projects/jdm_pulse.html
+++ b/pages/projects/jdm_pulse.html
@@ -11,10 +11,118 @@
 			<a href="../../index.html" class="nav-link">
 				<h2>Accueil</h2>
 			</a>
-			<h1 class="page-title">JDM Pulse</h1>
+			<a href="../projects.html" class="nav-link">
+				<h1 class="page-title">Projets</h1>
+			</a>
 		</header>
 		<main>
-			<section></section>
+			<section class="project-hero">
+				<div class="hero-content">
+					<h2>JDM Pulse</h2>
+					<div class="project-links">
+						<a href="https://github.com/Taglhydz/JDM-Pulse" target="_blank" class="btn-primary">
+							<img src="../../ui/images/icon_github.svg" alt="">
+							Voir sur GitHub
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section about-screenshot-section">
+				<div class="section-content">
+					<div class="about-screenshot-grid">
+						<div class="screenshot-container">
+							<img src="../../ui/images/screenproject_jdmpulse.png" alt="Screenshot JDM Pulse">
+						</div>
+						<div class="about-text">
+							<p>JDM Pulse est un site web conçu pour les passionnés de voitures japonaises (JDM - Japanese Domestic Market). Cette plateforme permet aux utilisateurs de découvrir les modèles iconiques, consulter leurs spécifications détaillées et sauvegarder leurs véhicules préférés en favoris.</p>
+							<p>Le site offre une expérience immersive avec une interface moderne et responsive, permettant aux utilisateurs de parcourir facilement la collection de véhicules JDM légendaires.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section tech-info-section">
+				<div class="section-content">
+					<h3>Technologies & Informations</h3>
+					<div class="tech-info-container">
+						<div class="tech-column">
+							<h4>Stack technique</h4>
+							<div class="tech-grid">
+								<div class="tech-item">
+									<p>Frontend</p>
+									<img class="tech-icon" src="../../ui/images/icon_react.png" alt="">
+								</div>
+								<div class="tech-item">
+									<p>Backend</p>
+									<img class="tech-icon" src="../../ui/images/icon_laravel.png" alt="">
+								</div>
+								<div class="tech-item">
+									<p>Base de données</p>
+									<img class="tech-icon" src="../../ui/images/icon_mysql.png" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="info-column">
+							<h4>Détails du projet</h4>
+							<div class="info-grid">
+								<div class="info-item">
+									<h4>Début du projet</h4>
+									<p>Février 2025</p>
+								</div>
+								<div class="info-item">
+									<h4>Statut</h4>
+									<p>Terminé</p>
+								</div>
+								<div class="info-item">
+									<h4>Type</h4>
+									<p>Projet personnel et professionnel</p>
+								</div>
+								<div class="info-item">
+									<h4>Durée</h4>
+									<p>2 mois</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section features-section">
+				<div class="section-content">
+					<h3>Fonctionnalités principales</h3>
+					<div class="features-list">
+						<div class="feature-item">
+							<span class="feature-icon">🚗</span>
+							<div>
+								<h4>Catalogue de véhicules</h4>
+								<p>Découvrez une large collection de voitures JDM iconiques avec leurs caractéristiques détaillées</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">❤️</span>
+							<div>
+								<h4>Système de favoris</h4>
+								<p>Sauvegardez vos véhicules préférés pour y accéder rapidement</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">📊</span>
+							<div>
+								<h4>Spécifications détaillées</h4>
+								<p>Consultez les performances, dimensions et caractéristiques techniques de chaque modèle</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">🔍</span>
+							<div>
+								<h4>Barre de recherche</h4>
+								<p>Faites une simple recherche pour trouvé le véhicule souhaité</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer>
 			<div>
@@ -94,5 +202,6 @@
 			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
 		<script src="../../scripts/projects_animations.js"></script>
+		<script src="../../scripts/antibot.js"></script>
 	</body>
 </html>
