--- a/pages/projects/kudosu.html
+++ b/pages/projects/kudosu.html
@@ -11,10 +11,110 @@
 			<a href="../../index.html" class="nav-link">
 				<h2>Accueil</h2>
 			</a>
-			<h1 class="page-title">Kudosu</h1>
+			<a href="../projects.html" class="nav-link">
+				<h1 class="page-title">Projets</h1>
+			</a>
 		</header>
 		<main>
-			<section></section>
+			<section class="project-hero">
+				<div class="hero-content">
+					<h2>Kudosu - résolveur de sudokus</h2>
+					<div class="project-links">
+						<a href="https://github.com/Taglhydz/Kudosu" target="_blank" class="btn-primary">
+							<img src="../../ui/images/icon_github.svg" alt="">
+							Voir sur GitHub
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section about-screenshot-section">
+				<div class="section-content">
+					<div class="about-screenshot-grid">
+						<div class="screenshot-container">
+							<img src="../../ui/images/screenproject_kudosu2.png" alt="Screenshot Kudosu">
+						</div>
+						<div class="about-text">
+							<p>Kudosu est un résolveur de Sudoku développé en Java avec une interface en ligne de commande. Ce projet implémente des algorithmes de résolution sophistiqués capables de résoudre des grilles de Sudoku de différents niveaux de difficulté.</p>
+							<p>L'application utilise des techniques de backtracking et d'optimisation pour trouver les solutions de manière efficace, tout en offrant une interface utilisateur claire et intuitive dans le terminal.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section tech-info-section">
+				<div class="section-content">
+					<h3>Technologies & Informations</h3>
+					<div class="tech-info-container">
+						<div class="tech-column">
+							<h4>Stack technique</h4>
+							<div class="tech-grid">
+								<div class="tech-item">
+									<p>Stack</p>
+									<img class="tech-icon" src="../../ui/images/icon_java.png" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="info-column">
+							<h4>Détails du projet</h4>
+							<div class="info-grid">
+								<div class="info-item">
+									<h4>Début du projet</h4>
+									<p>Juin 2023</p>
+								</div>
+								<div class="info-item">
+									<h4>Statut</h4>
+									<p>En cours</p>
+								</div>
+								<div class="info-item">
+									<h4>Type</h4>
+									<p>Projet personnel</p>
+								</div>
+								<div class="info-item">
+									<h4>Durée</h4>
+									<p>No limit</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section features-section">
+				<div class="section-content">
+					<h3>Fonctionnalités principales</h3>
+					<div class="features-list">
+						<div class="feature-item">
+							<span class="feature-icon">🧩</span>
+							<div>
+								<h4>Résolution automatique</h4>
+								<p>Résolvez n'importe quelle grille de Sudoku valide automatiquement</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">⚡</span>
+							<div>
+								<h4>Performance optimisée</h4>
+								<p>Algorithmes efficaces pour une résolution rapide même sur les grilles difficiles</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">📝</span>
+							<div>
+								<h4>Saisie interactive</h4>
+								<p>Entrez vos grilles facilement via l'interface en ligne de commande</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">✅</span>
+							<div>
+								<h4>UI/UX</h4>
+								<p>Interface claire et simple à comprendre</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer>
 			<div>
@@ -94,5 +194,6 @@
 			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
 		<script src="../../scripts/projects_animations.js"></script>
+		<script src="../../scripts/antibot.js"></script>
 	</body>
 </html>
