--- a/pages/projects/planet_cat.html
+++ b/pages/projects/planet_cat.html
@@ -11,10 +11,110 @@
 			<a href="../../index.html" class="nav-link">
 				<h2>Accueil</h2>
 			</a>
-			<h1 class="page-title">Planet Cat</h1>
+			<a href="../projects.html" class="nav-link">
+				<h1 class="page-title">Projets</h1>
+			</a>
 		</header>
 		<main>
-			<section></section>
+			<section class="project-hero">
+				<div class="hero-content">
+					<h2>Planet Cat</h2>
+					<div class="project-links">
+						<a href="https://github.com/Taglhydz/planet-cat" target="_blank" class="btn-primary">
+							<img src="../../ui/images/icon_github.svg" alt="">
+							Voir sur GitHub
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section about-screenshot-section">
+				<div class="section-content">
+					<div class="about-screenshot-grid">
+						<div class="screenshot-container">
+							<img src="../../ui/images/screenproject_planetcat.png" alt="Screenshot Planet Cat">
+						</div>
+						<div class="about-text">
+							<p>Planet Cat est un site web développé uniquement en React dans le cadre de ma formation au CESI. Ce projet d'apprentissage m'a permis de découvrir et de maîtriser les concepts fondamentaux du framework React, notamment les composants, les hooks, et la gestion d'état.</p>
+							<p>Le site présente un thème ludique autour des chats, tout en mettant en pratique les bonnes pratiques de développement en React et la création d'une application web moderne et interactive.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section tech-info-section">
+				<div class="section-content">
+					<h3>Technologies & Informations</h3>
+					<div class="tech-info-container">
+						<div class="tech-column">
+							<h4>Stack technique</h4>
+							<div class="tech-grid">
+								<div class="tech-item">
+									<p>Stack</p>
+									<img class="tech-icon" src="../../ui/images/icon_react.png" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="info-column">
+							<h4>Détails du projet</h4>
+							<div class="info-grid">
+								<div class="info-item">
+									<h4>Début du projet</h4>
+									<p>Mars 2025</p>
+								</div>
+								<div class="info-item">
+									<h4>Statut</h4>
+									<p>Terminé</p>
+								</div>
+								<div class="info-item">
+									<h4>Type</h4>
+									<p>Projet de formation</p>
+								</div>
+								<div class="info-item">
+									<h4>Durée</h4>
+									<p>1 semaine</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section features-section">
+				<div class="section-content">
+					<h3>Objectifs d'apprentissage</h3>
+					<div class="features-list">
+						<div class="feature-item">
+							<span class="feature-icon">🧩</span>
+							<div>
+								<h4>Composants React</h4>
+								<p>Création et organisation de composants réutilisables</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">🎣</span>
+							<div>
+								<h4>React Hooks</h4>
+								<p>Utilisation de useState, useEffect et autres hooks essentiels</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">🔄</span>
+							<div>
+								<h4>Gestion d'état</h4>
+								<p>Comprendre et implémenter la gestion d'état dans React</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">🎯</span>
+							<div>
+								<h4>Bonnes pratiques</h4>
+								<p>Application des conventions et patterns React recommandés</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer>
 			<div>
@@ -94,5 +194,6 @@
 			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
 		<script src="../../scripts/projects_animations.js"></script>
+		<script src="../../scripts/antibot.js"></script>
 	</body>
 </html>
