--- a/pages/projects/skyjo_terminal.html
+++ b/pages/projects/skyjo_terminal.html
@@ -11,10 +11,103 @@
 			<a href="../../index.html" class="nav-link">
 				<h2>Accueil</h2>
 			</a>
-			<h1 class="page-title">Skyjo-on-terminal</h1>
+			<a href="../projects.html" class="nav-link">
+				<h1 class="page-title">Projets</h1>
+			</a>
 		</header>
 		<main>
-			<section></section>
+			<section class="project-hero">
+				<div class="hero-content">
+					<h2>Skyjo sur un terminal</h2>
+					<div class="project-links">
+						<a href="https://github.com/Taglhydz/Skyjo-on-terminal" target="_blank" class="btn-primary">
+							<img src="../../ui/images/icon_github.svg" alt="">
+							Voir sur GitHub
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section about-screenshot-section">
+				<div class="section-content">
+					<div class="about-screenshot-grid">
+						<div class="screenshot-container">
+							<img src="../../ui/images/screenproject_skyjoterminal.png" alt="Screenshot Skyjo Terminal">
+						</div>
+						<div class="about-text">
+							<p>Skyjo Terminal est une adaptation du célèbre jeu de cartes Skyjo, développée en Python pour être jouée directement dans un terminal. Cette version console permet de jouer de 2 à 8 joueurs et reproduit fidèlement les règles du jeu original.</p>
+							<p>Le projet met l'accent sur une interface utilisateur claire et intuitive malgré les contraintes du terminal, offrant une expérience de jeu fluide et agréable.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section tech-info-section">
+				<div class="section-content">
+					<h3>Technologies & Informations</h3>
+					<div class="tech-info-container">
+						<div class="tech-column">
+							<h4>Stack technique</h4>
+							<div class="tech-grid">
+								<div class="tech-item">
+									<p>Stack</p>
+									<img class="tech-icon" src="../../ui/images/icon_python.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="info-column">
+							<h4>Détails du projet</h4>
+							<div class="info-grid">
+								<div class="info-item">
+									<h4>Début du projet</h4>
+									<p>Novembre 2022</p>
+								</div>
+								<div class="info-item">
+									<h4>Statut</h4>
+									<p>Terminé</p>
+								</div>
+								<div class="info-item">
+									<h4>Type</h4>
+									<p>Projet personnel</p>
+								</div>
+								<div class="info-item">
+									<h4>Durée</h4>
+									<p>No limit</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="project-section features-section">
+				<div class="section-content">
+					<h3>Fonctionnalités principales</h3>
+					<div class="features-list">
+						<div class="feature-item">
+							<span class="feature-icon">🎲</span>
+							<div>
+								<h4>Jeu complet</h4>
+								<p>Implémentation complète des règles du Skyjo original</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">👥</span>
+							<div>
+								<h4>Multijoueur local</h4>
+								<p>Jouez de 2 à 8 joueurs sur le même terminal</p>
+							</div>
+						</div>
+						<div class="feature-item">
+							<span class="feature-icon">📊</span>
+							<div>
+								<h4>Suivi des scores</h4>
+								<p>Système de comptage automatique des points et classement</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer>
 			<div>
@@ -94,5 +187,6 @@
 			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
 		<script src="../../scripts/projects_animations.js"></script>
+		<script src="../../scripts/antibot.js"></script>
 	</body>
 </html>
