--- a/pages/projects/jdm_pulse.html
+++ b/pages/projects/jdm_pulse.html
@@ -110,14 +110,14 @@
 							<span class="feature-icon">📊</span>
 							<div>
 								<h4>Spécifications détaillées</h4>
-								<p>Consultez les performances, dimensions et caractéristiques techniques de chaque modèle</p>
+								<p>Consultez les performances et caractéristiques techniques de chaque modèle</p>
 							</div>
 						</div>
 						<div class="feature-item">
 							<span class="feature-icon">🔍</span>
 							<div>
 								<h4>Barre de recherche</h4>
-								<p>Faites une simple recherche pour trouvé le véhicule souhaité</p>
+								<p>Faites une simple recherche pour trouver le véhicule souhaité</p>
 							</div>
 						</div>
 					</div>
